# coco-noise

./: CMakeLists.txt  Makefile  README.md  conanfile.py
coco/: CMakeLists.txt  noise.cpp  noise.hpp  permute8.hpp
generator/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  gTest.cpp
